; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_qeth_core_main.c___qeth_fill_buffer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_qeth_core_main.c___qeth_fill_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32, i8* }
%struct.qdio_buffer = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i8*, i32, i64 }

@PAGE_SIZE = common dso_local global i64 0, align 8
@SBAL_EFLAGS_LAST_FRAG = common dso_local global i64 0, align 8
@SBAL_EFLAGS_FIRST_FRAG = common dso_local global i64 0, align 8
@SBAL_EFLAGS_MIDDLE_FRAG = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sk_buff*, %struct.qdio_buffer*, i32, i32*, i32)* @__qeth_fill_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__qeth_fill_buffer(%struct.sk_buff* %0, %struct.qdio_buffer* %1, i32 %2, i32* %3, i32 %4) #0 {
  %6 = alloca %struct.sk_buff*, align 8
  %7 = alloca %struct.qdio_buffer*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %6, align 8
  store %struct.qdio_buffer* %1, %struct.qdio_buffer** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %16 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %17 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  store i32 %18, i32* %11, align 4
  %19 = load i32*, i32** %9, align 8
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %13, align 4
  %21 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %22 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %21, i32 0, i32 1
  %23 = load i8*, i8** %22, align 8
  store i8* %23, i8** %14, align 8
  %24 = load i32, i32* %8, align 4
  %25 = icmp eq i32 %24, 0
  %26 = zext i1 %25 to i64
  %27 = select i1 %25, i32 1, i32 0
  store i32 %27, i32* %15, align 4
  %28 = load i32, i32* %10, align 4
  %29 = icmp sge i32 %28, 0
  br i1 %29, label %30, label %40

30:                                               ; preds = %5
  %31 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %32 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %31, i32 0, i32 1
  %33 = load i8*, i8** %32, align 8
  %34 = load i32, i32* %10, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i8, i8* %33, i64 %35
  store i8* %36, i8** %14, align 8
  %37 = load i32, i32* %10, align 4
  %38 = load i32, i32* %11, align 4
  %39 = sub nsw i32 %38, %37
  store i32 %39, i32* %11, align 4
  store i32 0, i32* %15, align 4
  br label %40

40:                                               ; preds = %30, %5
  br label %41

41:                                               ; preds = %122, %40
  %42 = load i32, i32* %11, align 4
  %43 = icmp sgt i32 %42, 0
  br i1 %43, label %44, label %129

44:                                               ; preds = %41
  %45 = load i64, i64* @PAGE_SIZE, align 8
  %46 = load i8*, i8** %14, align 8
  %47 = ptrtoint i8* %46 to i64
  %48 = load i64, i64* @PAGE_SIZE, align 8
  %49 = urem i64 %47, %48
  %50 = sub i64 %45, %49
  %51 = trunc i64 %50 to i32
  store i32 %51, i32* %12, align 4
  %52 = load i32, i32* %11, align 4
  %53 = load i32, i32* %12, align 4
  %54 = icmp slt i32 %52, %53
  br i1 %54, label %55, label %57

55:                                               ; preds = %44
  %56 = load i32, i32* %11, align 4
  store i32 %56, i32* %12, align 4
  br label %57

57:                                               ; preds = %55, %44
  %58 = load i8*, i8** %14, align 8
  %59 = load %struct.qdio_buffer*, %struct.qdio_buffer** %7, align 8
  %60 = getelementptr inbounds %struct.qdio_buffer, %struct.qdio_buffer* %59, i32 0, i32 0
  %61 = load %struct.TYPE_2__*, %struct.TYPE_2__** %60, align 8
  %62 = load i32, i32* %13, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %61, i64 %63
  %65 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %64, i32 0, i32 0
  store i8* %58, i8** %65, align 8
  %66 = load i32, i32* %12, align 4
  %67 = load %struct.qdio_buffer*, %struct.qdio_buffer** %7, align 8
  %68 = getelementptr inbounds %struct.qdio_buffer, %struct.qdio_buffer* %67, i32 0, i32 0
  %69 = load %struct.TYPE_2__*, %struct.TYPE_2__** %68, align 8
  %70 = load i32, i32* %13, align 4
  %71 = sext i32 %70 to i64
  %72 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %69, i64 %71
  %73 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %72, i32 0, i32 1
  store i32 %66, i32* %73, align 8
  %74 = load i32, i32* %12, align 4
  %75 = load i32, i32* %11, align 4
  %76 = sub nsw i32 %75, %74
  store i32 %76, i32* %11, align 4
  %77 = load i32, i32* %11, align 4
  %78 = icmp ne i32 %77, 0
  br i1 %78, label %100, label %79

79:                                               ; preds = %57
  %80 = load i32, i32* %15, align 4
  %81 = icmp ne i32 %80, 0
  br i1 %81, label %82, label %90

82:                                               ; preds = %79
  %83 = load %struct.qdio_buffer*, %struct.qdio_buffer** %7, align 8
  %84 = getelementptr inbounds %struct.qdio_buffer, %struct.qdio_buffer* %83, i32 0, i32 0
  %85 = load %struct.TYPE_2__*, %struct.TYPE_2__** %84, align 8
  %86 = load i32, i32* %13, align 4
  %87 = sext i32 %86 to i64
  %88 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %85, i64 %87
  %89 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %88, i32 0, i32 2
  store i64 0, i64* %89, align 8
  br label %99

90:                                               ; preds = %79
  %91 = load i64, i64* @SBAL_EFLAGS_LAST_FRAG, align 8
  %92 = load %struct.qdio_buffer*, %struct.qdio_buffer** %7, align 8
  %93 = getelementptr inbounds %struct.qdio_buffer, %struct.qdio_buffer* %92, i32 0, i32 0
  %94 = load %struct.TYPE_2__*, %struct.TYPE_2__** %93, align 8
  %95 = load i32, i32* %13, align 4
  %96 = sext i32 %95 to i64
  %97 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %94, i64 %96
  %98 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %97, i32 0, i32 2
  store i64 %91, i64* %98, align 8
  br label %99

99:                                               ; preds = %90, %82
  br label %122

100:                                              ; preds = %57
  %101 = load i32, i32* %15, align 4
  %102 = icmp ne i32 %101, 0
  br i1 %102, label %103, label %112

103:                                              ; preds = %100
  %104 = load i64, i64* @SBAL_EFLAGS_FIRST_FRAG, align 8
  %105 = load %struct.qdio_buffer*, %struct.qdio_buffer** %7, align 8
  %106 = getelementptr inbounds %struct.qdio_buffer, %struct.qdio_buffer* %105, i32 0, i32 0
  %107 = load %struct.TYPE_2__*, %struct.TYPE_2__** %106, align 8
  %108 = load i32, i32* %13, align 4
  %109 = sext i32 %108 to i64
  %110 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %107, i64 %109
  %111 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %110, i32 0, i32 2
  store i64 %104, i64* %111, align 8
  br label %121

112:                                              ; preds = %100
  %113 = load i64, i64* @SBAL_EFLAGS_MIDDLE_FRAG, align 8
  %114 = load %struct.qdio_buffer*, %struct.qdio_buffer** %7, align 8
  %115 = getelementptr inbounds %struct.qdio_buffer, %struct.qdio_buffer* %114, i32 0, i32 0
  %116 = load %struct.TYPE_2__*, %struct.TYPE_2__** %115, align 8
  %117 = load i32, i32* %13, align 4
  %118 = sext i32 %117 to i64
  %119 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %116, i64 %118
  %120 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %119, i32 0, i32 2
  store i64 %113, i64* %120, align 8
  br label %121

121:                                              ; preds = %112, %103
  br label %122

122:                                              ; preds = %121, %99
  %123 = load i32, i32* %12, align 4
  %124 = load i8*, i8** %14, align 8
  %125 = sext i32 %123 to i64
  %126 = getelementptr inbounds i8, i8* %124, i64 %125
  store i8* %126, i8** %14, align 8
  %127 = load i32, i32* %13, align 4
  %128 = add nsw i32 %127, 1
  store i32 %128, i32* %13, align 4
  store i32 0, i32* %15, align 4
  br label %41

129:                                              ; preds = %41
  %130 = load i32, i32* %13, align 4
  %131 = load i32*, i32** %9, align 8
  store i32 %130, i32* %131, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
